{
  "sourceLanguage" : "en",
  "strings" : {
    "%lld incomplete" : {
      "localizations" : {
        "ja" : {
          "stringUnit" : {
            "state" : "machine_translated",
            "value" : "未完了%lld件"
          }
        }
      }
    },
    "%lld todos" : {
      "localizations" : {
        "ja" : {
          "stringUnit" : {
            "state" : "machine_translated",
            "value" : "やること%lld件"
          }
        }
      }
    },
    "%lld todos • Next: %@" : {
      "localizations" : {
        "en" : {
          "stringUnit" : {
            "state" : "new",
            "value" : "%1$lld todos • Next: %2$@"
          }
        },
        "ja" : {
          "stringUnit" : {
            "state" : "machine_translated",
            "value" : "やること%1$lld件 • 次: %2$@"
          }
        }
      }
    },
    "%lld/%lld" : {
      "localizations" : {
        "en" : {
          "stringUnit" : {
            "state" : "new",
            "value" : "%1$lld/%2$lld"
          }
        },
        "ja" : {
          "stringUnit" : {
            "state" : "machine_translated",
            "value" : "%1$lld/%2$lld"
          }
        }
      }
    },
    "Add" : {
      "localizations" : {
        "ja" : {
          "stringUnit" : {
            "state" : "machine_translated",
            "value" : "追加"
          }
        }
      }
    },
    "Add Favorite" : {
      "localizations" : {
        "ja" : {
          "stringUnit" : {
            "state" : "machine_translated",
            "value" : "お気に入りに追加"
          }
        }
      }
    },
    "Add todo" : {
      "localizations" : {
        "ja" : {
          "stringUnit" : {
            "state" : "machine_translated",
            "value" : "やることを追加"
          }
        }
      }
    },
    "Add todo titled ${title}" : {
      "localizations" : {
        "ja" : {
          "stringUnit" : {
            "state" : "machine_translated",
            "value" : "${title}というやることを追加"
          }
        }
      }
    },
    "All Done!" : {
      "localizations" : {
        "ja" : {
          "stringUnit" : {
            "state" : "machine_translated",
            "value" : "すべて完了!"
          }
        }
      }
    },
    "Complete ${todos}" : {
      "localizations" : {
        "ja" : {
          "stringUnit" : {
            "state" : "machine_translated",
            "value" : "${todos}を完了"
          }
        }
      }
    },
    "Couldn't load" : {
      "localizations" : {
        "ja" : {
          "stringUnit" : {
            "state" : "machine_translated",
            "value" : "読み込めません"
          }
        }
      }
    },
    "Delete" : {
      "localizations" : {
        "ja" : {
          "stringUnit" : {
            "state" : "machine_translated",
            "value" : "削除"
          }
        }
      }
    },
    "Delete “%@”?" : {
      "localizations" : {
        "ja" : {
          "stringUnit" : {
            "state" : "machine_translated",
            "value" : "“%@”を削除しますか?"
          }
        }
      }
    },
    "Delete ${entities}" : {
      "localizations" : {
        "ja" : {
          "stringUnit" : {
            "state" : "machine_translated",
            "value" : "${entities}を削除"
          }
        }
      }
    },
    "Delete ${todo}" : {
      "localizations" : {
        "ja" : {
          "stringUnit" : {
            "state" : "machine_translated",
            "value" : "${todo}を削除"
          }
        }
      }
    },
    "Delete ${todo} without confirming" : {
      "localizations" : {
        "ja" : {
          "stringUnit" : {
            "state" : "machine_translated",
            "value" : "${todo}を確認なしで削除"
          }
        }
      }
    },
    "Description" : {
      "localizations" : {
        "ja" : {
          "stringUnit" : {
            "state" : "machine_translated",
            "value" : "説明"
          }
        }
      }
    },
    "Details" : {
      "localizations" : {
        "ja" : {
          "stringUnit" : {
            "state" : "machine_translated",
            "value" : "詳細"
          }
        }
      }
    },
    "Done" : {
      "localizations" : {
        "ja" : {
          "stringUnit" : {
            "state" : "machine_translated",
            "value" : "完了"
          }
        }
      }
    },
    "Due Date" : {
      "localizations" : {
        "ja" : {
          "stringUnit" : {
            "state" : "machine_translated",
            "value" : "期限"
          }
        }
      }
    },
    "Due Soon" : {
      "localizations" : {
        "ja" : {
          "stringUnit" : {
            "state" : "machine_translated",
            "value" : "期限間近"
          }
        }
      }
    },
    "Get todo summary" : {
      "localizations" : {
        "ja" : {
          "stringUnit" : {
            "state" : "machine_translated",
            "value" : "やることの概要を取得"
          }
        }
      }
    },
    "Mark as complete" : {
      "localizations" : {
        "ja" : {
          "stringUnit" : {
            "state" : "machine_translated",
            "value" : "完了にする"
          }
        }
      }
    },
    "Mark as incomplete" : {
      "localizations" : {
        "ja" : {
          "stringUnit" : {
            "state" : "machine_translated",
            "value" : "未完了にする"
          }
        }
      }
    },
    "New Todo" : {
      "localizations" : {
        "ja" : {
          "stringUnit" : {
            "state" : "machine_translated",
            "value" : "新規やること"
          }
        }
      }
    },
    "No incomplete todos" : {
      "localizations" : {
        "ja" : {
          "stringUnit" : {
            "state" : "machine_translated",
            "value" : "未完了のやることはありません"
          }
        }
      }
    },
    "Open ${target}" : {
      "localizations" : {
        "ja" : {
          "stringUnit" : {
            "state" : "machine_translated",
            "value" : "${target}を開く"
          }
        }
      }
    },
    "Open the app to retry." : {
      "localizations" : {
        "ja" : {
          "stringUnit" : {
            "state" : "machine_translated",
            "value" : "アプリを開いてやり直してみてください。"
          }
        }
      }
    },
    "Remove Favorite" : {
      "localizations" : {
        "ja" : {
          "stringUnit" : {
            "state" : "machine_translated",
            "value" : "お気に入りから削除"
          }
        }
      }
    },
    "Search for ${query}" : {
      "localizations" : {
        "ja" : {
          "stringUnit" : {
            "state" : "machine_translated",
            "value" : "${query}を検索"
          }
        }
      }
    },
    "Show ${filter} todos" : {
      "localizations" : {
        "ja" : {
          "stringUnit" : {
            "state" : "machine_translated",
            "value" : "${filter}のやることを表示"
          }
        }
      }
    },
    "Snooze ${todo}" : {
      "localizations" : {
        "ja" : {
          "stringUnit" : {
            "state" : "machine_translated",
            "value" : "${todo}をスヌーズ"
          }
        }
      }
    },
    "Snooze ${todo} by 30 minutes" : {
      "localizations" : {
        "ja" : {
          "stringUnit" : {
            "state" : "machine_translated",
            "value" : "${todo}を30分スヌーズ"
          }
        }
      }
    },
    "todo" : {
      "localizations" : {
        "ja" : {
          "stringUnit" : {
            "state" : "machine_translated",
            "value" : "やること"
          }
        }
      }
    },
    "Todo Not Found" : {
      "localizations" : {
        "ja" : {
          "stringUnit" : {
            "state" : "machine_translated",
            "value" : "やることが見つかりません"
          }
        }
      }
    },
    "Todo title" : {
      "localizations" : {
        "ja" : {
          "stringUnit" : {
            "state" : "machine_translated",
            "value" : "やることのタイトル"
          }
        }
      }
    },
    "Todos" : {
      "localizations" : {
        "ja" : {
          "stringUnit" : {
            "state" : "machine_translated",
            "value" : "やること"
          }
        }
      }
    },
    "Todos —" : {
      "localizations" : {
        "ja" : {
          "stringUnit" : {
            "state" : "machine_translated",
            "value" : "やること —"
          }
        }
      }
    },
    "Toggle completion of ${todo}" : {
      "localizations" : {
        "ja" : {
          "stringUnit" : {
            "state" : "machine_translated",
            "value" : "${todo}の完了を切り替え"
          }
        }
      }
    },
    "Toggle favorite of ${todo}" : {
      "localizations" : {
        "ja" : {
          "stringUnit" : {
            "state" : "machine_translated",
            "value" : "${todo}のお気に入りを切り替え"
          }
        }
      }
    },
    "Upcoming" : {
      "localizations" : {
        "ja" : {
          "stringUnit" : {
            "state" : "machine_translated",
            "value" : "その他"
          }
        }
      }
    },
    "Update ${target}" : {
      "localizations" : {
        "ja" : {
          "stringUnit" : {
            "state" : "machine_translated",
            "value" : "${target}を更新"
          }
        }
      }
    }
  },
  "version" : "1.3"
}